fixed spacing and opacitys on floor items

--- a/src/components/LinkCard/LinkCard.css
+++ b/src/components/LinkCard/LinkCard.css
@@ -27,6 +27,7 @@
     background-color: rgb(173,255,47, 0.25);
     background-color: rgba(12, 56, 10, 0.171);
     background-color: rgba(58, 126, 18, 0.171);
+    background-color: 		#dad7c0;
     /* background-color:#d9c9ba; */
     /* background-color:#e4d4c3; */
     margin: 40px 20px 20px 20px;
